# cmake-catch-vsc-template

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  travis.sh
src/: CMakeLists.txt  cpplib.cpp  cpplib.h
src/abseil_demo/: CMakeLists.txt  hello_world.cc
src/abseil_flags/: CMakeLists.txt  flags_main.cc
src/lib/: CMakeLists.txt  cpplib.cpp  cpplib.h
src/main/: main.cpp
src/tests/: CMakeLists.txt  tests.cpp
tests/: CMakeLists.txt  Catch.cpp  catch.hpp  tests.cpp
